Update BitrixService.java